--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     html {
       font-family: 'Montserrat', sans-serif;
     }
+
     /* LOADER SCREEN */
     .loader_bg {
       position: fixed;
@@ -68,89 +69,129 @@
       display: grid;
       place-items: center;
       isolation: isolate;
+      background: navy;
+      background: hsl(213, 18%, 10%);
+      text-align: center;
+      color: #f4f4f4;
     }
-    /* LOADER SCREEN PSEUDO BACKGROUND */
-    .loader_bg::after {
+
+    .box {
+        width: 100%;
+        height: 4rem;
+        /* border: 2px solid #0005; */
+        margin-inline: auto;
+        margin-bottom: 1rem;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+
+      }
+      .inbox {
+          border: .15rem solid transparent;
+          width: 25%;
+          height: 100%;
+          margin-inline: auto;
+      }
+      
+      .inbox.inbox-1 {
+          border-width: .25rem;
+          border-top-color: hsl(209, 20%, 75%);
+          border-left-color: hsl(209, 20%, 75%);
+          border-bottom-color: hsl(209, 20%, 75%);
+          border-top-left-radius: .5rem;
+          border-bottom-left-radius: .5rem;
+          position: relative;
+          animation: box-1 1s ease forwards 2s;
+          opacity: 0;
+      }
+
+      .inbox.inbox-2 {
+          border-color: transparent;
+          border-top-color: #f4f4f4;
+          border-right-color: #f4f4f4;
+          border-bottom-color: #f4f4f4;
+          border-top-right-radius: .5rem;
+          border-bottom-right-radius: .5rem;
+          transform: translateX(.25rem) translateY(-.25rem);
+          animation: box-2 1s ease forwards 2s;
+          opacity: 0;
+      }
+
+    .title {
+      position: relative;
+    }
+
+    .title::after {
       content: '';
       position: absolute;
-      inset: 0;
-      background: hsl(213, 18%, 10%);
-      z-index: -1;
-      animation: zoom-out 2s ease 4s forwards;
-    }
-    /* 3 SECTOR SPINNER */
-    .loader_bg .spinner {
-      height: 5rem;
-      width: 5rem;
-      position: relative;
-      display: grid;
-      place-items: center;
-      isolation: isolate;
-      animation: spinner-out 1s ease 4s forwards;
-    }
-    /* GENERAL SECTOR STYLE */
-    .spinner .sector {
-      position: absolute;
+      bottom: -1rem;
+      left: 0;
       width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      border: .25rem solid transparent;
-      animation: rotate 3s infinite;
-      mix-blend-mode: overlay;
-    }
-    /* SECTOR 1 */
-    .sector.sector-1 {
-      border-top-color: #b60f30;
-      animation-duration: 1.5s;
-      animation-timing-function: ease-in-out;
-    }
-    /* SECTOR 2 */
-    .sector.sector-2 {
-      border-right-color: hsl(210, 19%, 75%);
-      animation-duration: 2s;
-      animation-timing-function: ease-in;
-    }
-    /* SECTOR 3 */
-    .sector.sector-3 {
-      border-left-color: hsl(210, 16%, 33%);
-      animation-duration: 2.5s;
-      animation-timing-function: ease-out;
+      height: .125rem;
+      background: linear-gradient(90deg, transparent, hsl(209, 20%, 75%), transparent);
+      animation: underline 1.5s ease forwards 1s;
+      opacity: 0;
     }
 
-    /* LOADER PSEUDO BG FADE OUT */
-    @keyframes zoom-out {
+    h1 {
+      margin-bottom: .5rem;
+      color: #f4f4f4;
+    }
+
+    h1 span {
+      color: hsl(209, 20%, 75%);
+    }
+
+
+    p {
+      text-transform: uppercase;
+      color: hsl(209, 20%, 75%);
+    }
+
+    @keyframes underline {
+      0% {
+        transform: scaleX(0);
+      }
       100% {
+        transform: scaleX(1);
+        opacity: 1;
+      }
+    }
+
+    @keyframes box-1 {
+      0% {
+        transform: translateX(-.5rem);
         opacity: 0;
       }
+      100% {
+        opacity: 1;
+      }
     }
-
-    /* ROTATE SPINNER */
-    @keyframes rotate {
+    @keyframes box-2 {
       0% {
-        transform: rotate(0);
+        transform: translateX(.5rem) translateY(-.25rem);
+        opacity: 0;
       }
-
       100% {
-        transform: rotate(360deg);
+        opacity: 1;
       }
     }
 
-    /* SPINNER FADE OUT */
-    @keyframes spinner-out {
-      100% {
-        transform: scale(0);
-      }
-    }
   </style>
 </head>
 
 <body>
   <!-- LOADER -->
   <div class="loader_bg">
-    <div class="spinner">
-      <div class="sector sector-1"></div>
-      <div class="sector sector-2"></div>
-      <div class="sector sector-3"></div>
+    <div id="logo">
+        <div class="box">
+            <div class="inbox inbox-1"></div>
+            <div class="inbox inbox-2"></div>
+        </div>
+        <div class="title">
+            <h1>Shakex<span>Sempe</span></h1>
+            <p>web developer</p>
+        </div>
     </div>
   </div>
   <!-- HEADER -->
@@ -761,11 +802,11 @@
   </figure>
 </div>
   <!-- PRELOADER SCRIPT -->
-  <script>
+  <!-- <script>
     setTimeout(function () {
       $('.loader_bg').fadeToggle();
     }, 5000);
-  </script>
+  </script> -->
   </body>
 
 </html>
