--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
       opacity: 0;
     }
 
-    h1 {
+    .title h1 {
       margin-bottom: .5rem;
       color: #f4f4f4;
     }
 
-    h1 span {
+    .title h1 span {
       color: hsl(209, 20%, 75%);
     }
 
 
-    p {
+    .title p {
       text-transform: uppercase;
       color: hsl(209, 20%, 75%);
     }
@@ -802,11 +802,11 @@
   </figure>
 </div>
   <!-- PRELOADER SCRIPT -->
-  <!-- <script>
+  <script>
     setTimeout(function () {
       $('.loader_bg').fadeToggle();
-    }, 5000);
-  </script> -->
+    }, 4500);
+  </script>
   </body>
 
 </html>
