--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
           opacity: 0;
       }
 
-    .title {
+    .loader_bg .title {
       position: relative;
     }
 
-    .title::after {
+    .loader_bg .title::after {
       content: '';
       position: absolute;
       bottom: -1rem;
