--- a/pages/work.html
+++ b/pages/work.html
@@ -166,6 +166,9 @@
                 <div class="work-header">
                     <h2 data-text="projects" class="section-title io-item io-item">pro<span>j</span>ects</h2>
                 </div>
+                <div class="work-intro io-item">
+                    <h3>Freelance<span>Projects</span></h3>
+                </div>
                 <div class="work-container">
                     <!-- ITEM 1 -->
                     <div class="item io-item">
@@ -238,6 +241,9 @@
 
         <section class="link-section">
             <div class="work">
+                <div class="work-intro io-item">
+                    <h3>porfolio<span>Projects</span></h3>
+                </div>
                 <div class="work-container">
                     <!-- ITEM 1 -->
                     <div class="item io-item">
