--- a/pages/work.html
+++ b/pages/work.html
@@ -232,16 +232,7 @@
 
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
 
-        <section class="link-section">
-            <div class="work">
-                <div class="work-intro io-item">
-                    <h3>porfolio<span>Projects</span></h3>
-                </div>
-                <div class="work-container">
                     <!-- ITEM 1 -->
                     <div class="item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
@@ -264,6 +255,85 @@
                                     <a href="https://github.com/ShakexSempe/munch-up" class="cta-secondary"
                                         target="_blank">repository<i class="fa-solid fa-code"></i></a>
                                     <a href="https://munch-up.netlify.app/" class="cta-primary" target="_blank">visit
+                                        page<i class="fas fa-caret-right"></i></a>
+                                </div>
+                                <div class="item-meta-data">
+                                    <p>html</p>
+                                    <p>sass</p>
+                                    <p>javascript</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!-- ITEM 2 -->
+                    <div class="item io-item">
+                        <!-- FLEX: TITLE + CONTENT -->
+                        <div class="item-flex-container">
+                            <div class="item-content">
+                                <figure class="item-image">
+                                    <img src="../img/thato.png" width="500" height="284" alt="Thato Sempe logo">
+                                </figure>
+                            </div>
+                            <div class="item-header">
+                                <h3 class="item-title">Expert Technical Drawings</h3>
+                                <div class="item-description">
+                                    <p>fully responsive website featuring: <br>
+                                        Direct email & call links. <br>
+                                        Web hosting & email accounts</p>
+                                </div>
+                                <div class="item-cta">
+                                    <a href="https://github.com/ShakexSempe/thato-tech-drawings" class="cta-secondary"
+                                        target="_blank">repository<i class="fa-solid fa-code"></i></a>
+                                    <a href="https://thato-technical-drawings.netlify.app/" class="cta-primary"
+                                        target="_blank">visit page<i class="fas fa-caret-right"></i></a>
+                                </div>
+                                <div class="item-meta-data">
+                                    <p>html</p>
+                                    <p>sass</p>
+                                    <p>javascript</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="link-section">
+            <div class="work">
+                <div class="work-intro io-item">
+                    <h3>porfolio<span>Projects</span></h3>
+                </div>
+                <div class="work-container">
+                    <!-- ITEM 1 -->
+                    <div class="item io-item">
+                        <!-- FLEX: TITLE + CONTENT -->
+                        <div class="item-flex-container">
+                            <div class="item-content">
+                                <figure class="item-image">
+                                    <img src="../img/fcc-min.png" width="500" height="273" loading="lazy"
+                                        alt="Munch Up logo">
+                                </figure>
+                            </div>
+                            <div class="item-header">
+                                <h3 class="item-title">freeCodeCamp</h3>
+
+                                <div class="item-description">
+                                    <h4>Responsive web design certificate
+                                    </h4>
+                                    <ul>
+                                        <li><a href="https://shakexsempe.github.io/lewis-hamilton-tribute-page/" target="_blank">Tribute page</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                        <li><a href="https://shakexsempe.github.io/Survey-Form/" target="_blank">survey form</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                        <li><a href="https://shakexsempe.github.io/Product-Landing-Page/" target="_blank">product landing page</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                        <li><a href="https://shakexsempe.github.io/Technical-Documentation-Page/" target="_blank">Technical Documentation Page</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="item-cta">
+                                    <a href="https://github.com/ShakexSempe/FreeCodeCamp-portfolio" class="cta-secondary"
+                                        target="_blank">repository<i class="fa-solid fa-code"></i></a>
+                                    <a href="https://shakexsempe.github.io/FreeCodeCamp-portfolio/" class="cta-primary" target="_blank">visit
                                         page<i class="fas fa-caret-right"></i></a>
                                 </div>
                                 <div class="item-meta-data">
