--- a/pages/work.html
+++ b/pages/work.html
@@ -307,7 +307,8 @@
                     <h3>porfolio<span>Projects</span></h3>
                 </div>
                 <div class="work-container">
-                    <!-- ITEM 1 -->
+                    
+                    <!-- ITEM FCC -->
                     <div class="item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
@@ -345,27 +346,34 @@
 
                         </div>
                     </div>
-                    <!-- ITEM 2 -->
+
+                    <!-- ITEM JS -->
                     <div class="item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
                             <div class="item-content">
                                 <figure class="item-image">
-                                    <img src="../img/thato.png" width="500" height="284" alt="Thato Sempe logo">
+                                    <img src="../img/js-min.png" width="500" height="273" loading="lazy"
+                                        alt="Munch Up logo">
                                 </figure>
                             </div>
                             <div class="item-header">
-                                <h3 class="item-title">Expert Technical Drawings</h3>
+                                <h3 class="item-title">Javascript Portfolio</h3>
+
                                 <div class="item-description">
-                                    <p>fully responsive website featuring: <br>
-                                        Direct email & call links. <br>
-                                        Web hosting & email accounts</p>
+                                    <h4>Javascript Projects
+                                    </h4>
+                                    <ul>
+                                        <li><a href="https://shakexsempe.github.io/countdown-timer/" target="_blank">countdown timer</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                        <li><a href="https://shakexsempe.github.io/menu-js/" target="_blank">menu</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                        <li><a href="https://shakexsempe.github.io/video-landing-page/" target="_blank">video landing page</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                    </ul>
                                 </div>
                                 <div class="item-cta">
-                                    <a href="https://github.com/ShakexSempe/thato-tech-drawings" class="cta-secondary"
+                                    <a href="https://github.com/ShakexSempe/javascript-projects-portfolio" class="cta-secondary"
                                         target="_blank">repository<i class="fa-solid fa-code"></i></a>
-                                    <a href="https://thato-technical-drawings.netlify.app/" class="cta-primary"
-                                        target="_blank">visit page<i class="fas fa-caret-right"></i></a>
+                                    <a href="https://shakexsempe.github.io/javascript-projects-portfolio/" class="cta-primary" target="_blank">visit
+                                        page<i class="fas fa-caret-right"></i></a>
                                 </div>
                                 <div class="item-meta-data">
                                     <p>html</p>
@@ -376,6 +384,45 @@
 
                         </div>
                     </div>
+
+                    <!-- ITEM JS -->
+                    <div class="item io-item">
+                        <!-- FLEX: TITLE + CONTENT -->
+                        <div class="item-flex-container">
+                            <div class="item-content">
+                                <figure class="item-image">
+                                    <img src="../img/fem.png" width="500" height="273" loading="lazy"
+                                        alt="Munch Up logo">
+                                </figure>
+                            </div>
+                            <div class="item-header">
+                                <h3 class="item-title">front end mentor</h3>
+
+                                <div class="item-description">
+                                    <h4>front-end Projects
+                                    </h4>
+                                    <ul>
+                                        <li><a href="https://shakexsempe.github.io/loopstudios-landing-page/" target="_blank">loopstudios</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                        <li><a href="https://shakexsempe.github.io/sunnyside-agency-landing-page/" target="_blank">sunnyside agency</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                        <li><a href="https://shakexsempe.github.io/order-summray-component/" target="_blank">order summary component</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="item-cta">
+                                    <a href="https://github.com/ShakexSempe/front-end-mentor-links" class="cta-secondary"
+                                        target="_blank">repository<i class="fa-solid fa-code"></i></a>
+                                    <a href="https://shakexsempe.github.io/front-end-mentor-links/" class="cta-primary" target="_blank">visit
+                                        page<i class="fas fa-caret-right"></i></a>
+                                </div>
+                                <div class="item-meta-data">
+                                    <p>html</p>
+                                    <p>sass</p>
+                                    <p>javascript</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
