--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           width: 25%;
           height: 100%;
           margin-inline: auto;
+          position: relative;
       }
       
       .inbox.inbox-1 {
@@ -100,8 +101,7 @@
           border-bottom-color: hsl(209, 20%, 75%);
           border-top-left-radius: .5rem;
           border-bottom-left-radius: .5rem;
-          position: relative;
-          animation: box-1 1.25s ease forwards 2.225s;
+          animation: box-1 1s ease forwards 1s;
           opacity: 0;
       }
 
@@ -113,7 +113,7 @@
           border-top-right-radius: .5rem;
           border-bottom-right-radius: .5rem;
           transform: translateX(.25rem) translateY(-.25rem);
-          animation: box-2 1.25s ease forwards 2.25s;
+          animation: box-2 1s ease forwards 1.25s;
           opacity: 0;
       }
 
@@ -121,21 +121,26 @@
       position: relative;
     }
 
-    .loader_bg .title::after {
-      content: '';
-      position: absolute;
-      bottom: -1rem;
-      left: 0;
-      width: 100%;
-      height: .125rem;
-      background: linear-gradient(90deg, transparent, hsl(209, 20%, 75%), transparent);
-      animation: underline 1.5s ease forwards 1s;
-      opacity: 0;
-    }
+    
 
     .title h1 {
       margin-bottom: .5rem;
       color: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      animation: title-h1 1.25s forwards 1.75s;
+      opacity: 0;
+    }
+    @keyframes title-h1 {
+      0% {
+        opacity: 0;
+        gap: 1rem;
+      }
+      100% {
+        gap: 0;
+        opacity: 1;
+      }
     }
 
     .title h1 span {
@@ -146,6 +151,30 @@
     .title p {
       text-transform: uppercase;
       color: hsl(209, 20%, 75%);
+      letter-spacing: .25rem;
+      animation: title-p 1.25s forwards 2.25s;
+      opacity: 0;
+    }
+    @keyframes title-p {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+        letter-spacing: normal;
+      }
+    }
+
+    .loader_bg .title::after {
+      content: '';
+      position: absolute;
+      bottom: -1rem;
+      left: 0;
+      width: 100%;
+      height: .125rem;
+      background: linear-gradient(90deg, transparent, hsl(209, 20%, 75%), transparent);
+      animation: underline 1.5s ease forwards 2.75s;
+      opacity: 0;
     }
 
     @keyframes underline {
@@ -801,12 +830,14 @@
     <a title="Footer" href="#footer-bottom"><i class="fa-solid fa-circle-question"></i></a>
   </figure>
 </div>
-  <!-- PRELOADER SCRIPT -->
+  
+<!-- PRELOADER SCRIPT -->
   <script>
     setTimeout(function () {
       $('.loader_bg').fadeToggle();
     }, 5000);
   </script>
+
   </body>
 
 </html>
