--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
         <div class="footer-item">
           <h3>all rights reserved</h3>
           <p>copyright&copy; Boitumelo Sempe</p>
-          <p>Mahikeng, South Africa</p>
+          <p> <span>web design & development</p>
           <span class="date"></span>
         </div>
         <div class="footer-item">
@@ -804,6 +804,7 @@
             <li><i class="fas fa-envelope"></i><a href="mailto:bshakex@gmail.com">bshakex@gmail.com</a></li>
             <li><i class="fas fa-phone"></i><a href="tel:0726005104">072 600 5104</a></li>
             <li><i class="fab fa-whatsapp"></i><a href="https://wa.me/+27716876941">071 687 6941</a></li>
+            <li><i class="fa-solid fa-location-dot"></i><a>Mahikeng, South Africa</a></li>
           </ul>
         </div>
       </div>
