--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
         <div class="footer-item">
           <h3>all rights reserved</h3>
           <p>copyright&copy; Boitumelo Sempe</p>
-          <p> <span>web design & development</p>
+          <p>web design & development</p>
           <span class="date"></span>
         </div>
         <div class="footer-item">
