--- a/thanks.html
+++ b/thanks.html
@@ -79,7 +79,7 @@
                     <div class="footer-item">
                         <h3>all rights reserved</h3>
                         <p>copyright&copy; Boitumelo Sempe</p>
-                        <p>Mahikeng, South Africa</p>
+                        <p>web design & development</p>
                         <span class="date"></span>
                     </div>
                     <div class="footer-item">
