--- a/pages/work.html
+++ b/pages/work.html
@@ -588,7 +588,7 @@
                     <div class="footer-item">
                         <h3>all rights reserved</h3>
                         <p>copyright&copy; Boitumelo Sempe</p>
-                        <p>Mahikeng, South Africa</p>
+                        <p>Web Design & Development</p>
                         <span class="date"></span>
                     </div>
                     <div class="footer-item">
