--- a/thanks.html
+++ b/thanks.html
@@ -42,6 +42,35 @@
                         <p>shakex<span>Sempe</span></p>
                     </a>
                 </div>
+                <div class="nav-list">>
+                    <div class="links-container" data-linksContainer>
+                        <ul class="links">
+                            <!-- HOME LINK -->
+                            <li>
+                                <i class="fas fa-house"></i>
+                                <a href="index.html" title="web development skills" data-after="Home"
+                                    class="scroll-link scroll-li">home</a>
+                            </li>
+                            <!-- SKILLS LINK -->
+                            <li>
+                                <i class="fas fa-code"></i>
+                                <a href="pages/skills.html" title="web development skills" data-link data-after="skills"
+                                    class="scroll-link scroll-li">skills</a>
+                            </li>
+                            <!-- ABOUT LINK -->
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <a href="pages/about.html" title="about Boitumelo Sempe" data-link data-after="About"
+                                    class="scroll-link scroll-li">about</a>
+                            </li>
+                            <!-- WORK[PROJECTS] LINK -->
+                            <li>
+                                <i class="fa-solid fa-laptop-code"></i>
+                                <a href="pages/work.html" title="github repositories" data-link data-after="Projects"
+                                    class="scroll-link scroll-li">projects</a>
+                            </li>
+                    </div>
+                </div>
             </nav>
         </div>
     </header>
@@ -56,7 +85,7 @@
                 <div class="content-value">
                     <p style="text-transform: none;">I will be contact soon..</p>
                     <div class="cta">
-                        <a href="#main" class="btn">homepage<i class="fa-solid fa-angles-right"></i></a>
+                        <a href="index.html" class="btn">homepage<i class="fa-solid fa-house"></i></a>
                     </div>
                 </div>
             </div>
