--- a/pages/about.html
+++ b/pages/about.html
@@ -366,7 +366,7 @@
                 </div>
                 <!-- BOTTOM FOOTER -->
                 <div class="footer-bottom">
-                    <img src="../img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
+                    <img src="../img/shakex-html-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
 
                     <div class="footer-item">
                         <h3>all rights reserved</h3>
