--- a/thanks.html
+++ b/thanks.html
@@ -103,7 +103,7 @@
             <div class="footer ">
                 <!-- BOTTOM FOOTER -->
                 <div id="footer-bottom" class="footer-bottom">
-                    <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
+                    <img src="img/shakex-html-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
 
                     <div class="footer-item">
                         <h3>all rights reserved</h3>
