work items desc

--- a/pages/work.html
+++ b/pages/work.html
@@ -304,7 +304,7 @@
         <section class="link-section">
             <div class="work">
                 <div class="work-intro io-item">
-                    <h3>porfolio<span>Projects</span></h3>
+                    <h3>portfolio<span>Projects</span></h3>
                 </div>
                 <div class="work-container">
                     
@@ -328,7 +328,7 @@
                                         <li><a href="https://shakexsempe.github.io/lewis-hamilton-tribute-page/" target="_blank">Tribute page</a><i class="fas fa-arrow-up-right-from-square"></i></li>
                                         <li><a href="https://shakexsempe.github.io/Survey-Form/" target="_blank">survey form</a><i class="fas fa-arrow-up-right-from-square"></i></li>
                                         <li><a href="https://shakexsempe.github.io/Product-Landing-Page/" target="_blank">product landing page</a><i class="fas fa-arrow-up-right-from-square"></i></li>
-                                        <li><a href="https://shakexsempe.github.io/Technical-Documentation-Page/" target="_blank">Technical Documentation Page</a><i class="fas fa-arrow-up-right-from-square"></i></li>
+                                        <li><a href="https://shakexsempe.github.io/Technical-Documentation-Page/" target="_blank">Technical Documentation</a><i class="fas fa-arrow-up-right-from-square"></i></li>
                                     </ul>
                                 </div>
                                 <div class="item-cta">
@@ -383,7 +383,7 @@
                         </div>
                     </div>
 
-                    <!-- ITEM JS -->
+                    <!-- ITEM FRONT-END MENTOR-->
                     <div class="item io-item">
                         <!-- FLEX: TITLE + CONTENT -->
                         <div class="item-flex-container">
@@ -397,8 +397,6 @@
                                 <h3 class="item-title">front end mentor</h3>
 
                                 <div class="item-description">
-                                    <h4>front-end Projects
-                                    </h4>
                                     <ul>
                                         <li><a href="https://shakexsempe.github.io/loopstudios-landing-page/" target="_blank">loopstudios</a><i class="fas fa-arrow-up-right-from-square"></i></li>
                                         <li><a href="https://shakexsempe.github.io/sunnyside-agency-landing-page/" target="_blank">sunnyside agency</a><i class="fas fa-arrow-up-right-from-square"></i></li>
