--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 </div>
               <div class="item-cta">
                 <a href="https://github.com/ShakexSempe/orich-trading" class="cta-secondary" target="_blank">repository<i class="fa-solid fa-code"></i></a>
-                <a href="https://orich-trading-projects.netlify.app/" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
+                <a href="https://orichtrading.co.za/" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
               </div>
               <div class="item-meta-data">
                 <p>html</p>
