--- a/index.html
+++ b/index.html
@@ -212,11 +212,16 @@
 <body>
   <!-- LOADER -->
   <div class="loader_bg">
-    <div class="spinner">
-      <div class="sector sector-1"></div>
-      <div class="sector sector-2"></div>
-      <div class="sector sector-3"></div>
+    <div id="logo">
+      <div class="box">
+        <div class="inbox inbox-1"></div>
+        <div class="inbox inbox-2"></div>
       </div>
+      <div class="title">
+        <h1>Shakex<span>Sempe</span></h1>
+        <p>web developer</p>
+      </div>
+    </div>
   </div>
   <!-- HEADER -->
   <header id="header" data-header class="header">
