--- a/index.html
+++ b/index.html
@@ -763,8 +763,9 @@
       </div>
       <!-- BOTTOM FOOTER -->
       <div id="footer-bottom" class="footer-bottom">
-        <img src="img/shakex-html-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
-        
+        <a href="pages/design.html">
+          <img src="img/shakex-html-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
+        </a>
         <div class="footer-item">
           <h3>all rights reserved</h3>
           <p>copyright&copy; Boitumelo Sempe</p>
