--- a/pages/design.html
+++ b/pages/design.html
@@ -151,7 +151,7 @@
         <div class="design-container">
 
             <div class="design-section contrast-section">
-                <div class="box">
+                <div class="box io-item">
                     <h2>contrast</h2>
                 </div>
             </div>
