--- a/pages/design.html
+++ b/pages/design.html
@@ -168,7 +168,16 @@
 
                 </div>
             </div>
-            <div class="design-section align-section"></div>
+
+            <div class="design-section align-section">
+                <div class="box">
+                    <h2>alignment</h2>
+                    <h3>alignment</h3>
+                    <h3>alignment</h3>
+                    <h3>alignment</h3>
+                    <h3>alignment</h3>
+                </div>
+            </div>
             <div class="design-section proximity-section"></div>
         </div>
         <!-- FOOTER -->
