--- a/pages/design.html
+++ b/pages/design.html
@@ -170,7 +170,7 @@
             </div>
 
             <div class="design-section align-section">
-                <div class="box">
+                <div class="box io-item">
                     <h2>alignment</h2>
                     <h3>alignment</h3>
                     <h3>alignment</h3>
