--- a/pages/design.html
+++ b/pages/design.html
@@ -178,7 +178,33 @@
                     <h3>alignment</h3>
                 </div>
             </div>
-            <div class="design-section proximity-section"></div>
+            <div class="design-section prox-section">
+                
+                <div class="box">
+
+                    <div class="item-1">
+                        <h2>proximity</h2>
+                        <p>
+                            proximity proximity proximity proximity proximity proximity 
+                        </p>
+                    </div>
+
+                    <div class="item-2">
+                        <h2>proximity</h2>
+                        <p>
+                            proximity proximity proximity proximity proximity proximity 
+                        </p>
+                    </div>
+
+                    <div class="item-3">
+                        <h2>proximity</h2>
+                        <p>
+                            proximity proximity proximity proximity proximity proximity 
+                        </p>
+                    </div>
+
+                </div>
+            </div>
         </div>
         <!-- FOOTER -->
         <section class="link-section" id="footer">
