repeat and contrast animations

--- a/pages/design.html
+++ b/pages/design.html
@@ -148,23 +148,23 @@
         <div class="design-container">
 
             <div class="design-section contrast-section">
-                <div class="box io-item">
+                <div class="box">
                     <h2>contrast</h2>
                 </div>
             </div>
 
             <div class="design-section repeat-section">
                 <div class="box">
-                    <h2><span>r</span>epetition</h2>
-                    <h2>r<span>e</span>petition</h2>
-                    <h2>re<span>p</span>etition</h2>
-                    <h2>rep<span>e</span>tition</h2>
-                    <h2>repe<span>t</span>ition</h2>
-                    <h2>repet<span>i</span>tion</h2>
-                    <h2>repeti<span>t</span>ion</h2>
-                    <h2>repetit<span>i</span>on</h2>
-                    <h2>repetiti<span>o</span>n</h2>
-                    <h2>repetitio<span>n</span></h2>
+                    <h2><span class="io-item">r</span>epetition</h2>
+                    <h2>r<span class="io-item">e</span>petition</h2>
+                    <h2>re<span class="io-item">p</span>etition</h2>
+                    <h2>rep<span class="io-item">e</span>tition</h2>
+                    <h2>repe<span class="io-item">t</span>ition</h2>
+                    <h2>repet<span class="io-item">i</span>tion</h2>
+                    <h2>repeti<span class="io-item">t</span>ion</h2>
+                    <h2>repetit<span class="io-item">i</span>on</h2>
+                    <h2>repetiti<span class="io-item">o</span>n</h2>
+                    <h2>repetitio<span class="io-item">n</span></h2>
 
                 </div>
             </div>
