--- a/pages/design.html
+++ b/pages/design.html
@@ -182,21 +182,21 @@
                 
                 <div class="box">
 
-                    <div class="item-1">
+                    <div class="prox-item item-1 io-item">
                         <h2>proximity</h2>
                         <p>
                             proximity proximity proximity proximity proximity proximity 
                         </p>
                     </div>
 
-                    <div class="item-2">
+                    <div class="prox-item item-2 io-item">
                         <h2>proximity</h2>
                         <p>
                             proximity proximity proximity proximity proximity proximity 
                         </p>
                     </div>
 
-                    <div class="item-3">
+                    <div class="prox-item item-3 io-item">
                         <h2>proximity</h2>
                         <p>
                             proximity proximity proximity proximity proximity proximity 
