--- a/pages/design.html
+++ b/pages/design.html
@@ -151,6 +151,7 @@
                 <div class="box">
                     <h2>contrast</h2>
                 </div>
+                <p>create a focal point & <br> establish visual interest</p>
             </div>
 
             <div class="design-section repeat-section">
