--- a/pages/design.html
+++ b/pages/design.html
@@ -124,7 +124,7 @@
     <!-- END OF HERO-->
     <!-- END OF PROGRESS BAR-->
     <!--HERO-->
-    <section id="home" data-hero class="banner about-banner">
+    <section id="home" data-hero class="banner index-banner">
         <div class="hero">
             <div class="hero-index-content">
                 <div class="content-title">
@@ -140,6 +140,10 @@
                     </div>
                 </div>
             </div>
+            <picture class="hero-image">
+                <source srcset="../img/hero_1900.jpg" media="(min-width: 820px)" width="1920" height="1359">
+                <img src="../img/hero_450.jpg" width="450" height="318" alt="Laptop">
+            </picture>
         </div>
     </section>
     <!-- END OF HERO-->
@@ -148,6 +152,15 @@
         <div class="design-container">
 
             <div class="design-section contrast-section">
+                <picture>
+                    <source
+                    srcset="../img/face_600.jpg"
+                    media="(min-width: 600px)"
+                    width="600"
+                    height="398"
+                    >
+                    <img src="../img/face_450.jpg"  alt="African face looking up">
+                </picture>
                 <div class="box">
                     <h2>contrast</h2>
                 </div>
@@ -179,6 +192,7 @@
                     <h3>alignment</h3>
                 </div>
             </div>
+            
             <div class="design-section prox-section">
                 
                 <div class="box">
