--- a/pages/about.html
+++ b/pages/about.html
@@ -121,17 +121,15 @@
             <div class="progress-bar index-bar" id="myBar"></div>
         </div>
     </header>
-    <!-- END OF HERO-->
-    <!-- END OF PROGRESS BAR-->
     <!--HERO-->
     <section id="home" data-hero class="banner about-banner">
         <div class="hero">
             <div class="hero-content">
                 <div class="hero-title">
-                    <h1 class="hero-title-header"><a href="#main">Front-end web developer</a></h1>
-                    <p class="hero-description">
+                    <h1 class="hero-title-header">Front-end web developer</h1>
+                    <h2 class="hero-description">
                         my name is<br>boitumelo sempe
-                    </p>
+                    </h2>
                     <p class="hero-meta-description" id="aka">a.k.a</p>
                 </div>
                 <a href="#main" class="scroll-link hero-cta" type="button" title="Main Content" id="cta-header">
@@ -145,8 +143,6 @@
             </div>
         </div>
     </section>
-    <!-- END OF HERO-->
-    <!--  END OF MENU -->
     <main id="main" data-main>
         <!-- ABOUT SECTION-->
         <section class="link-section" id="about">
