--- a/index.html
+++ b/index.html
@@ -555,6 +555,7 @@
       </div>
     </div>
   </section>
+
 <!-- SKILLS MENU CONTAINER -->
 <div class="skill-section-container">
 
@@ -599,7 +600,7 @@
         <article title="WhatsApp Number" class="contact-item io-item">
           <div class="title" data-info="text">
               <i class="fa-brands fa-whatsapp"></i>
-              <h3>whatsApp</h3>
+              <h3>whatsApp number</h3>
           </div>
           <div id="whatsapp" class="contact-info">
             <p>+27716876941</p>
@@ -624,6 +625,7 @@
     </div>
     <!-- end of padding section -->
   </section>
+
   <!--PROJECTS SECTION-->
   <section class="link-section" id="projects">
     <div class="projects-header">
@@ -637,6 +639,7 @@
       </div>
     </div>
   </section>
+
   <!-- SKILLS MENU CONTAINER -->
   <div class="skill-section-container">
 
@@ -653,6 +656,7 @@
     </div>
 
   </div>
+
   <!-- FOOTER -->
   <section class="link-section" id="footer">
     <div class="footer ">
@@ -780,7 +784,7 @@
       </div>
     </div>
   </section>
-  <!-- END OF FOOTER-->
+
 </main>
 <!-- BOTTOM NAVIGATION -->
 <div class="bottom-nav" id="bottom-nav">
