--- a/pages/skills.html
+++ b/pages/skills.html
@@ -276,6 +276,7 @@
                     <li>Animations & Transitions</li>
                     <li>Flexbox & Grid Layout</li>
                     <li>Responsive Web Design</li>
+                    <li>Custom Properties</li>
                   </ul>
                 </article>
 
