--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div id="logo">
         <div class="box">
             <div class="inbox inbox-1"></div>
@@ -226,7 +226,7 @@
             <p>web developer</p>
         </div>
     </div>
-  </div> -->
+  </div>
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -576,7 +576,6 @@
   <section class="link-section" id="contact">
     <div class="contact container">
       <div class="contact-header">
-        <!-- <h2 title="contact information" data-text="contactinfo" class="section-title io-item io-item">Contact<span>Info</span></h2> -->
         <h2 title="contact information" data-text="contactinfo" class="section-title io-item">
           Contact<span>Info</span></h2>
       </div>
