--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     content="responsive web design, user interface, UI, user experience, UX, homepage, landing page, website design, website development, seo, freelance,  web hosting, domain registration, ">
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
+  <link rel="preload" href="css/style.css" as="style" />
+  <link rel="preload" href="js/app.js" as="script" />
   <!-- FAVICON -->
   <!-- <link rel="shortcut icon" href="icons/favicon.ico"> -->
   <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
@@ -43,7 +45,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- JAVASCRIPT -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" defer referrerpolicy="no-referrer"></script>
-  <script src="js/projects.js"></script>
+  <script src="js/projects.js" defer></script>
   <script src="js/app.js" defer></script>
 
   <link rel="preload" href="img/hero_450.jpg" as="image" media="(max-width: 450px)">
