header scss comments

--- a/index.html
+++ b/index.html
@@ -233,13 +233,17 @@
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
     <a class="skip-link" href="#main">skip to main content</a>
+    <!-- NAVBAR CONTAINER -->
     <div class="navbar">
+      
       <nav id="nav">
+
         <div class="logo">
           <a href="#home" title="Shakex Sempe" class="scroll-link">
             <p>shakex<span>Sempe</span></p>
           </a>
         </div>
+
         <div class="nav-list">
           <div class="hamburger">
             <div class="bar"></div>
@@ -289,7 +293,9 @@
             </div>
           </div>
         </div>
+
       </nav>
+      
     </div>
     <!-- PROGRESS BAR-->
     <div class="progress-container">
