--- a/index.html
+++ b/index.html
@@ -234,8 +234,7 @@
     <!-- SKIP TO MAIN LINK -->
     <a class="skip-link" href="#main">skip to main content</a>
     <!-- NAVBAR CONTAINER -->
-    <div class="navbar">
-      
+      <!-- #NAV = LOGO + LIST -->
       <nav id="nav">
 
         <div class="logo">
@@ -243,11 +242,13 @@
             <p>shakex<span>Sempe</span></p>
           </a>
         </div>
-
+        <!-- NAV-LIST = WEBSITE LINKS + TOGGLE -->
         <div class="nav-list">
+
           <div class="hamburger">
             <div class="bar"></div>
           </div>
+
           <div class="links-container" data-linksContainer>
             <ul class="links">
               <!-- HOME LINK -->
@@ -292,11 +293,11 @@
                   class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
             </div>
           </div>
+
         </div>
 
       </nav>
       
-    </div>
     <!-- PROGRESS BAR-->
     <div class="progress-container">
       <div class="progress-bar index-bar" id="myBar"></div>
