--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div id="logo">
         <div class="box">
             <div class="inbox inbox-1"></div>
@@ -228,7 +228,7 @@
             <p>web developer</p>
         </div>
     </div>
-  </div> -->
+  </div>
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
