--- a/index.html
+++ b/index.html
@@ -330,8 +330,10 @@
       </picture>
     </div>
   </section>
-  <!-- MAIN -->
+  <!-- MAIN SECTION = SKILLS + WORK + ABOUT + CONTACT + PROJECTS + FOOTER -->
+  <!-- SECTIONS SEPARATED BY '.SKILLS-SECTION-CONTAINERS' -->
   <main id="main" data-main>
+
   <!-- SKILLS SECTION-->
   <section class="skills-section link-section" id="skills">
     <div class="skills-header">
@@ -360,6 +362,7 @@
         </div>
       </div>
     </div>
+    
     <!-- SKILLS MENU CONTAINER -->
     <div class="skill-section-container">
       
@@ -380,7 +383,7 @@
     </div>
 
   </section>
-  <!--END OF SKILLS SECTION-->
+
   <!-- WORK / PORTFOLIO -->
   <section id="work" class="link-section">
     <div class="work">
@@ -504,83 +507,110 @@
   <!-- ABOUT SECTION-->
   <section class="link-section" id="about">
     <div id="about-target" class="about container">
+
+      <!-- COL-RIGHT =  -->
       <div class="col-right">
+
+        <!-- SECTION TITLE -->
         <div class="about-header">
           <h2 title="About Me: Boitumelo Shakex Sempe" data-text="aboutme" class="section-title io-item io-item">About<span>me</span></h2>
         </div>
+
+        <!-- ARTICLE CONTAINER = INTRO + CTA BUTTONS + ARTICLE BODY  -->
         <div class="article-container">
+
           <article class="about-article">
+            <!-- FIRST PARAGRAPH -->
             <div class="about-intro">
-            <p class="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and Front-End Web
-              Developer specializing in Responsive Web Design and User Experience.
-            </p>
-          </div>
-          <div class="buttons-container">
-            <a href="mailto:bshakex@gmail.com?subject=CV Request" class="btn btn-secondary">Request CV<i class="fas fa-envelope"></i></a>
-            <a href="pages/about.html" class="btn btn-primary">About Page<i class="fas fa-arrow-up-right-from-square"></i></a>
-
-          </div>
-          <div class="article-body">
-
-            <div class="body-item">
-              <i class="fa-brands fa-free-code-camp"></i>
-              <h3 class="body-item-title">freeCodeCamp</h3>
-              <p>Certificate in Responsive Web Design.</p>
-              <a class="body-item-link" title="Responsive Web Design certificate"
-                href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design"
-                target="_blank"><i class="fas fa-arrow-up-right-from-square"></i>freecodecamp.org/certification/</a>
+              <p class="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and
+                Front-End Web
+                Developer specializing in Responsive Web Design and User Experience.
+              </p>
             </div>
 
-            <div class="body-item">
-              <i class="fa-solid fa-user-graduate"></i>
-              <h3 class="body-item-title">University of Pretoria</h3>
-              <p>BPolSci International Relations.</p>
-              <a href="https://www.up.ac.za/" target="_blank"><i class="fas fa-arrow-up-right-from-square"></i>www.up.ac.za/</a>
+            <!-- ABOUT CTA BUTTONS = CV REQUEST + ABOUT PAGE LINK -->
+            <div class="buttons-container">
+
+              <a href="mailto:bshakex@gmail.com?subject=CV Request" class="btn btn-secondary">Request CV<i
+                  class="fas fa-envelope"></i></a>
+
+              <a href="pages/about.html" class="btn btn-primary">About Page<i
+                  class="fas fa-arrow-up-right-from-square"></i></a>
+
             </div>
 
-            <div class="body-item">
-              <i class="fa-solid fa-graduation-cap"></i>
-              <h3 class="body-item-title">International School of South Africa</h3>
-              <p>Cambridge International Advanced Subsidiary & Advanced level.</p>
-              <a href="https://www.issa.co.za/" target="_blank"><i class="fas fa-arrow-up-right-from-square"></i>www.issa.co.za</a>
+            <!-- ARTICLE BODY = CONTAINER FOR BODY ITEMS -->
+            <div class="article-body">
+
+              <!-- BODY ITEMS = ICON + H3 + P + LINK -->
+              <div class="body-item">
+                <i class="fa-brands fa-free-code-camp"></i>
+                <h3 class="body-item-title">freeCodeCamp</h3>
+                <p>Certificate in Responsive Web Design.</p>
+                <a class="body-item-link" title="Responsive Web Design certificate"
+                  href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design"
+                  target="_blank"><i class="fas fa-arrow-up-right-from-square"></i>freecodecamp.org/certification/</a>
+              </div>
+
+              <div class="body-item">
+                <i class="fa-solid fa-user-graduate"></i>
+                <h3 class="body-item-title">University of Pretoria</h3>
+                <p>BPolSci International Relations.</p>
+                <a href="https://www.up.ac.za/" target="_blank"><i
+                    class="fas fa-arrow-up-right-from-square"></i>www.up.ac.za/</a>
+              </div>
+
+              <div class="body-item">
+                <i class="fa-solid fa-graduation-cap"></i>
+                <h3 class="body-item-title">International School of South Africa</h3>
+                <p>Cambridge International Advanced Subsidiary & Advanced level.</p>
+                <a href="https://www.issa.co.za/" target="_blank"><i
+                    class="fas fa-arrow-up-right-from-square"></i>www.issa.co.za</a>
+              </div>
+
+              <div class="body-item">
+                <i class="fa-solid fa-headset"></i>
+                <h3 class="body-item-title">Compensation Fund - Dept of Labour</h3>
+                <p>Customer Care Agent.</p>
+                <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank"><i
+                    class="fas fa-arrow-up-right-from-square"></i>www.labour.gov.za</a>
+              </div>
+
             </div>
 
-            <div class="body-item">
-              <i class="fa-solid fa-headset"></i>
-              <h3 class="body-item-title">Compensation Fund - Dept of Labour</h3>
-              <p>Customer Care Agent.</p>
-              <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank"><i class="fas fa-arrow-up-right-from-square"></i>www.labour.gov.za</a>
-            </div>
-
-          </div>
           </article>
+
         </div>
+
       </div>
+
+      <!-- COL-LEFT = ABOUT IMAGE -->
       <div class="col-left">
         <figure class="about-img">
           <img class="about-img-1" src="img/me-min.jpg" width="450px" height="600" loading="lazy" alt="Boitumelo Shakex Sempe">
           <img class="about-img-2" src="img/shakexblue-min.jpg" width="450px" height="600" loading="lazy" alt="Boitumelo Shakex Sempe">
         </figure>
       </div>
+
     </div>
   </section>
 
-<!-- SKILLS MENU CONTAINER -->
-<div class="skill-section-container">
+  <!-- SKILLS MENU CONTAINER -->
+  <div class="skill-section-container">
 
 
-  <div class="skill-section section-4 light-section">
+    <div class="skill-section section-4 light-section">
 
-    <div class="skill-section-title section-title-4">
-      <img src="img/laptop-coffee.jpg" loading="lazy" alt="Keyboard">
-      <h3>Interpersonal & <br> Soft Skills</h3>
-      <p>Communication, creativity, <br> interaction & team work.</p>
-      <a href="pages/about.html" class="btn btn-dark">about me<i class="fas fa-angles-right"></i></a>
+      <div class="skill-section-title section-title-4">
+        <img src="img/laptop-coffee.jpg" loading="lazy" alt="Keyboard">
+        <h3>Interpersonal & <br> Soft Skills</h3>
+        <p>Communication, creativity, <br> interaction & team work.</p>
+        <a href="pages/about.html" class="btn btn-dark">about me<i class="fas fa-angles-right"></i></a>
+      </div>
+
     </div>
 
   </div>
-
-</div>
   <!-- CONTACT SECTION-->
   <section class="link-section" id="contact">
     <div class="contact container">
