--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- SKILLS MENU CONTAINER -->
     <div class="skill-section-container">
       
@@ -611,8 +611,10 @@
     </div>
 
   </div>
+
   <!-- CONTACT SECTION-->
   <section class="link-section" id="contact">
+
     <div class="contact container">
       <div class="contact-header">
         <h2 title="contact information" data-text="contactinfo" class="section-title io-item">
@@ -762,7 +764,7 @@
         <!-- end of social media links -->
         <!-- contact form -->
         <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
-          <h2 data-scroll class="footer-section-title">Get In Touch</h2>
+          <h2 class="footer-section-title">Get In Touch</h2>
 
           <div class="input-div">
             <label for="name">name :</label>
@@ -776,7 +778,7 @@
 
           <div class="input-div">
             <label for="message">message :</label>
-            <textarea rows="5" cols="50" minlength="2" name="Message" placeholder="leave a message..." id="message"
+            <textarea rows="4" cols="50" minlength="2" name="Message" placeholder="leave a message..." id="message"
               required></textarea>
           </div>
 
