--- a/index.html
+++ b/index.html
@@ -236,15 +236,15 @@
     <!-- NAVBAR CONTAINER -->
       <!-- #NAV = LOGO + LIST -->
       <nav id="nav">
-
+        <!-- WEBSITE LOGO = LINK(A) WITH EMBEDDED P{+ SPAN} -->
         <div class="logo">
-          <a href="#home" title="Shakex Sempe" class="scroll-link">
+          <a href="#home" title="Home: Shakex Sempe" class="scroll-link">
             <p>shakex<span>Sempe</span></p>
           </a>
         </div>
         <!-- NAV-LIST = WEBSITE LINKS + TOGGLE -->
         <div class="nav-list">
-
+          <!-- HAMBURGER TOGGLE COMPONENT -->
           <div class="hamburger">
             <div class="bar"></div>
           </div>
