--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-html-logo.png">
 
   <!-- TITLE -->
-  <title>Web Developer - Design & Front-End Development || Portfolio</title>
+  <title>Web Design & Front-End Development || Portfolio</title>
   <!--  -->
   <!-- META DESCRIPTION -->
   <meta name="description"
